# func_prog

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  cabal.project  stack.yaml  template-fprog.cabal  x
src/: Angabe1.hs  Angabe2.hs  Angabe3.lhs  Angabe4.lhs  Angabe5.hs  Angabe5_old.hs  Angabe6.hs  Angabe7.hs  Angabe_TdT.hs  Angabe_TdT.lhs  CHANGELOG.md  Test4.hs  Test5.hs  Test6.hs  Test7.hs  asdf.hs
test/: Angabe1.hs  Angabe1_TestSuite.hs  Angabe1_TestSuite1.hs  Angabe2_TestSuite.hs  Angabe3_TestSuite.hs  Angabe4_TestSuite.hs  Angabe5_TestSuite.hs  Angabe7_TestSuite.hs  Angabe_TdT_TestSuite1.hs  Main.hs  TestSuite1.hs  TestSuite2.hs  TestSuite3.hs  TestSuite4.hs  TestSuite5.hs  TestSuite6.hs  TestSuite7.hs
